fixed height and add collapse on checkout-page

--- a/src/App.css
+++ b/src/App.css
@@ -320,7 +320,7 @@ h5,
 
 @media (max-width: 998.98px) {
   .collapse {
-    position: absolute !important;
+    position: absolute ;
   }
 
   .carousel-caption {
